Include alt text with parsed images
